--- a/skins/malmo/screen.css
+++ b/skins/malmo/screen.css
@@ -13,11 +13,13 @@
 
 /* Framework */
 body {
+  margin: 2.6em 0 0 0;
 }
 /* Content */
 div#content {
-  margin-left: 10em;
+  margin: 0 auto;
   padding: 1em;
+  max-width: 40em;
 }
 /* Head */
 #mw-page-base {
@@ -202,10 +204,6 @@ div.vectorMenuFocus {
   background-image: url(images/arrow-down-focus-icon.png);
   background-position: 100% 60%;
 }
-/* @noflip */
-body.rtl div.vectorMenu {
-  direction: rtl;
-}
 /* OVERRIDDEN BY COMPLIANT BROWSERS */
 /* @noflip */
 div#mw-head div.vectorMenu h5 {
@@ -256,23 +254,6 @@ div.vectorMenu div.menu {
   display: none;
   clear: both;
   text-align: left;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-/* @noflip */
-body.rtl div.vectorMenu div.menu {
-  margin-left: 24px;
-}
-/* IGNORED BY IE6 */
-/* @noflip */
-body.rtl div.vectorMenu > div.menu {
-  margin-left: auto;
-}
-/* IGNORED BY IE6 */
-/* Also fixes old versions of FireFox */
-/* @noflip */
-body.rtl div.vectorMenu > div.menu,
-x:-moz-any-link {
-  margin-left: 23px;
 }
 /* Enable forcing showing of the menu for accessibility */
 div.vectorMenu:hover div.menu,
