--- a/skins/malmo/screen.css
+++ b/skins/malmo/screen.css
@@ -640,11 +640,6 @@ div#content {
   float: right;
 }
 
-ul {
-  /* @embed */
-  list-style-image: url(images/bullet-icon.png);
-}
-
 pre, .mw-code {
   line-height: 1.3em;
 }
@@ -721,15 +716,6 @@ div#content a.external[href *=".pdf?"], div#content a.external[href *=".PDF?"],
   /* @embed */
   background: url(images/document-icon.png) center right no-repeat;
   padding-right: 13px;
-}
-
-/* Icon for Usernames */
-#pt-userpage,
-#pt-anonuserpage,
-#pt-login {
-  background: url(images/user-icon.png) left top no-repeat;
-  padding-left: 15px !important;
-  text-transform: none;
 }
 
 .redirectText {
@@ -812,9 +798,6 @@ div.vectorTabs ul {
   background-repeat: no-repeat;
 }
 
-/* Tooltips are outside of the normal body code, so this helps make the size of the text sensible */
-.tipsy {
-  font-size: 0.8125em;
+.printfooter {
+  display: none;
 }
-
-
