--- a/skins/malmo/screen.css
+++ b/skins/malmo/screen.css
@@ -1,5 +1,5 @@
 /*
- * Based on the Vector css
+ * Based on the Wikipedia Vector stylesheet
  */
 
 /* Framework */
@@ -391,9 +391,7 @@ div#mw-panel div.portal div.body ul li a:visited {
 }
 /* Footer */
 div#footer {
-  margin-left: 10em;
   margin-top: 0;
-  padding: 0.75em;
 }
 div#footer ul {
   list-style: none;
@@ -472,10 +470,6 @@ div#footer #footer-places li {
     text-decoration: none;
     background-image: none;
     font-size: 0.8125em;
-  }
-  #preftoc a:hover,
-  #preftoc a:focus {
-    text-decoration: underline;
   }
   #preftoc li.selected a {
     color: #333;
@@ -673,3 +667,6 @@ div.vectorTabs ul {
   /*line-height: 1.4;*/
 }
 
+footer.bigfoot nav {
+    max-width: 40em;
+}
