--- a/skins/malmo/stylesheets/screen.css
+++ b/skins/malmo/stylesheets/screen.css
@@ -1,349 +1,23 @@
 /*
  * Based on the Wikipedia Vector stylesheet
  */
+body  {
+  margin: 2.6em 0 0 0 !important;
+}
+
+div#content a,
+div#mw-head a {
+  color: #0060b0 !important;
+}
 
 /* Framework */
-html body {
-  margin: 2.6em 0 0 0 !important
-}
 /* Content */
 div#content {
   margin: 0 auto;
   padding: 1em;
   max-width: 40em;
 }
-/* Head */
-#mw-page-base {
-  height: 5em;
-  background-color: white;
-}
-#mw-head-base {
-  margin-top: -5em;
-  margin-left: 10em;
-  height: 5em;
-}
-div#mw-head {
-  width: 100%;
-}
-div#mw-head h5 {
-  margin: 0;
-  padding: 0;
-}
-/* Hide empty portlets */
-div.emptyPortlet {
-    display: none;
-}
-/* Personal */
-#p-personal {
-}
-#p-personal h5 {
-  display: none;
-}
-#p-personal ul {
-  list-style: none;
-  margin: 0;
-  padding-left: 10em; /* Keep from overlapping logo */
-}
-/* @noflip */
-#p-personal li {
-  line-height: 1.125em;
-  float: left;
-}
-/* This one flips! */
-#p-personal li {
-  margin-left: 0.75em;
-  margin-top: 0.5em;
-  font-size: 0.8125em;
-  white-space: nowrap;
-}
-/* Navigation Containers */
-#left-navigation {
-}
-#right-navigation {
-  float: right;
-  margin-top: 2.5em;
-}
-/* Navigation Labels */
-div.vectorTabs h5,
-div.vectorMenu h5 span {
-  display: none;
-}
-/* Namespaces and Views */
-/* @noflip */
-div.vectorTabs {
-  float: left;
-  height: 2.5em;
-}
-/* @noflip */
-div.vectorTabs ul {
-  float: left;
-}
-div.vectorTabs ul {
-  height: 100%;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-/* @noflip */
-div.vectorTabs ul li {
-  float: left;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-div.vectorTabs ul li {
-  line-height: 1.125em;
-  display: inline-block;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #f3f3f3;
-  white-space: nowrap;
-}
-/* IGNORED BY IE6 */
-div.vectorTabs ul > li {
-  display: block;
-}
-div.vectorTabs li.selected {
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-div.vectorTabs li a {
-  display: inline-block;
-  height: 1.9em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  color: #0645ad;
-  cursor: pointer;
-  font-size: 0.8125em;
-}
-/* IGNORED BY IE6 */
-div.vectorTabs li > a {
-  display: block;
-}
-div.vectorTabs li.icon a {
-  background-position: bottom right;
-  background-repeat: no-repeat;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-div.vectorTabs span a  {
-  display: inline-block;
-  padding-top: 1.25em;
-}
-/* IGNORED BY IE6 */
-/* @noflip */
-div.vectorTabs span > a {
-  float: left;
-  display: block;
-}
-div.vectorTabs span {
-  display: inline-block;
-}
-div.vectorTabs li.selected a,
-div.vectorTabs li.selected a:visited{
-  color: #333;
-  text-decoration: none;
-}
-div.vectorTabs li.new a,
-div.vectorTabs li.new a:visited{
-  color: #a55858;
-}
-/* Variants and Actions */
-/* @noflip */
-div.vectorMenu {
-  direction: ltr;
-  float: left;
-  cursor: pointer;
-}
-div.vectorMenuFocus {
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-/* @noflip */
-div#mw-head div.vectorMenu h5 {
-  float: left;
-}
-/* This will be flipped - unlike the one above it */
-div#mw-head div.vectorMenu h5 {
-  background-position: bottom left;
-  margin-left: -1px;
-}
-/* IGNORED BY IE6 */
-div#mw-head div.vectorMenu > h5 {
-  background-image: none;
-}
-div#mw-head div.vectorMenu h4 {
-  display: inline-block;
-  float: left;
-  font-size: 0.8125em;
-  padding-left: 0.5em;
-  padding-top: 1.375em;
-  font-weight: normal;
-  border: none;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-/* @noflip */
-div.vectorMenu h5 a {
-  display: inline-block;
-  width: 24px;
-  height: 2.5em;
-  text-decoration: none;
-}
-/* This will be flipped - unlike the one above it */
-div.vectorMenu h5 a {
-  background-position: bottom right;
-}
-/* IGNORED BY IE6 */
-div.vectorMenu h5 > a {
-  display: block;
-}
-div.vectorMenu div.menu {
-  position: relative;
-  display: none;
-  clear: both;
-  text-align: left;
-}
-/* Enable forcing showing of the menu for accessibility */
-div.vectorMenu:hover div.menu,
-div.vectorMenu div.menuForceShow {
-  display: block;
-}
-div.vectorMenu ul {
-  background-color: white;
-  border: solid 1px silver;
-  border-top-width: 0;
-  list-style: none;
-  list-style-image: none;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  margin-left: -1px;
-  text-align: left;
-}
-/* Fixes old versions of FireFox */
-div.vectorMenu ul,
-x:-moz-any-link {
-  min-width: 5em;
-}
-/* Returns things back to normal in modern versions of FireFox */
-div.vectorMenu ul,
-x:-moz-any-link,
-x:default {
-  min-width: 0;
-}
-div.vectorMenu li {
-  padding: 0;
-  margin: 0;
-  text-align: left;
-  line-height: 1em;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-div.vectorMenu li a {
-  display: inline-block;
-  padding: 0.5em;
-  white-space: nowrap;
-  color: #0645ad;
-  cursor: pointer;
-  font-size: 0.8125em;
-}
-/* IGNORED BY IE6 */
-div.vectorMenu li > a {
-  display: block;
-}
-div.vectorMenu li.selected a,
-div.vectorMenu li.selected a:visited {
-  color: #333;
-  text-decoration: none;
-}
-/* Search */
-#p-search h5 {
-  display: none;
-}
-/* @noflip */
-#p-search {
-  float: left;
-}
-#p-search {
-  margin-right: 0.5em;
-  margin-left: 0.5em;
-}
-#p-search form,
-#p-search input {
-  margin: 0;
-  margin-top: 0.4em;
-}
-div#simpleSearch {
-  display: block;
-  width: 14em;
-  height: 1.4em;
-  margin-top: 0.65em;
-  position: relative;
-  min-height: 1px; /* Gotta trigger hasLayout for IE7 */
-  border: solid 1px #aaa;
-  color: black;
-  background-color: white;
-}
-div#simpleSearch label {
-  /*
-   * DON'T PANIC! Browsers that won't scale this properly are the same browsers that have JS issues that prevent
-   * this from ever being shown anyways.
-  */
-  font-size: 13px;
-  top: 0.25em;
-  direction: ltr;
-}
-div#simpleSearch input {
-  color: black;
-  direction: ltr;
-}
-div#simpleSearch input:focus {
-  outline: none;
-}
-div#simpleSearch input.placeholder {
-  color: #999;
-}
-div#simpleSearch input::-webkit-input-placeholder {
-  color: #999;
-}
-div#simpleSearch input#searchInput {
-  width: 90%;
-  margin: 0;
-  padding: 0;
-  padding-left: 0.2em;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-  outline: none;
-  border: none;
-  /*
-   * DON'T PANIC! Browsers that won't scale this properly are the same browsers that have JS issues that prevent
-   * this from ever being shown anyways.
-  */
-  font-size: 13px;
-  background-color: transparent;
-  direction: ltr;
-}
-div#simpleSearch button#searchButton {
-  position: absolute;
-  width: 10%;
-  right: 0;
-  top: 0;
-  padding: 0;
-  padding-top: 0.3em;
-  padding-bottom: 0.2em;
-  padding-right: 0.4em;
-  margin: 0;
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-  background-image: none;
-}
-/* OVERRIDDEN BY COMPLIANT BROWSERS */
-div#simpleSearch button#searchButton img {
-  border: none;
-  margin: 0;
-  margin-top: -3px;
-  padding: 0;
-}
-/* IGNORED BY IE6 */
-div#simpleSearch button#searchButton > img {
-  margin: 0;
-}
+
 /* Panel */
 div#mw-panel {
   padding-top: 1em;
@@ -669,4 +343,43 @@ div.vectorTabs ul {
 
 footer.bigfoot nav {
     max-width: 40em;
+}
+
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.clearfix:after {
+  clear: both;
+}
+
+
+/* Head */
+#mw-head {
+  padding: 0 1em;
+  border-bottom: 1px solid #ccc;
+}
+#mw-head li {
+  font-size: .8125em;
+  display: inline;
+  margin-left: 2em;
+}
+
+#p-views, #p-search {
+  float: right;
+}
+#p-search {
+  margin-left: 2em;
+}
+#p-search h5 {
+  display: none;
+}
+
+#p-cactions {
+  display: none;
 }
