--- a/skins/malmo/stylesheets/commonInterface.css
+++ b/skins/malmo/stylesheets/commonInterface.css
@@ -6,9 +6,13 @@
 .catlinks {
 	border: 1px solid #aaa;
 	background-color: #f9f9f9;
-	padding: 5px;
+  padding: 0.7em 1em;
 	margin-top: 1em;
 	clear: both;
+}
+
+#mw-normal-catlinks ul {
+  margin: .3em 0 0 .5em;
 }
 
 /* User Message */
