--- a/skins/common/commonElements.css
+++ b/skins/common/commonElements.css
@@ -64,6 +64,44 @@ hr {
 	margin: .2em 0;
 }
 
+/* Structural Elements */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: black;
+	background: none;
+	font-weight: normal;
+	margin: 0;
+	overflow: hidden;
+	padding-top: .5em;
+	padding-bottom: .17em;
+	border-bottom: 1px solid #aaa;
+}
+h1 {
+	font-size: 188%;
+}
+h1 .editsection {
+	font-size: 53%;
+}
+h2 {
+	font-size: 150%;
+}
+h2 .editsection {
+	font-size: 67%;
+}
+h3,
+h4,
+h5,
+h6 {
+	border-bottom: none;
+	font-weight: bold;
+}
+h3 {
+	font-size: 132%;
+}
 h3 .editsection {
 	font-size: 76%;
 	font-weight: normal;
