--- a/skins/malmo/stylesheets/application.css
+++ b/skins/malmo/stylesheets/application.css
@@ -421,3 +421,34 @@ table#mw-htmlform-info td label {
   font-size: 13px !important;
 }
 
+.editButtons {
+  line-height: 3em;
+}
+
+#pagehistory {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  font-size: 0.8125em !important;
+}
+
+#mw-notification-area {
+  border: 1px solid #ccc;
+  background: #f5f5f5;
+}
+
+.mw-specialpages-table {
+  margin-top: 1em;
+  border: none;
+}
+
+.mw-specialpages-table th,
+.mw-specialpages-table td {
+  border: none;
+}
+
+@media ( max-width: 32em ) {
+  #p-views li.talk {
+    display: none !important;
+  }
+}
